change labels and backgroundColor

--- a/docs/css/new-age.css
+++ b/docs/css/new-age.css
@@ -156,8 +156,8 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
-  background: url("../img/bg-pattern.png"), #7b4397;
-  background: url("../img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
+  background: url("../img/bg-pattern.png"), #727CD5;
+  background: url("../img/bg-pattern.png"), linear-gradient(to left, #727CD5, #4DA2D8,#97D0EE );
 }
 
 header.masthead .header-content {
