--- a/docs/css/new-age.css
+++ b/docs/css/new-age.css
@@ -15,12 +15,12 @@ body {
 }
 
 a {
-  color: #fdcc52;
+  color: #727CD5;
   transition: all .35s;
 }
 
 a:hover, a:focus {
-  color: #fcbd20;
+  color: #4DA2D8;
 }
 
 hr {
@@ -31,7 +31,17 @@ hr {
 }
 
 hr.light {
-  border-color: white;
+  border-color: #4DA2D8;
+}
+
+@font-face {
+  font-family: poppins;
+  src: url(Poppins.ttf);
+}
+@font-face {
+  font-family: poppins;
+  src: url(Poppins-Bold.ttf);
+  font-weight: bold;
 }
 
 h1,
@@ -40,10 +50,12 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
+  font-family: poppins, 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
   font-weight: 200;
   letter-spacing: 1px;
 }
+
+
 
 p {
   font-size: 18px;
@@ -61,7 +73,7 @@ section h2 {
 
 #mainNav {
   border-color: rgba(34, 34, 34, 0.05);
-  background-color: white;
+  background-color: #4DA2D8;
   transition: all .35s;
   font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
   font-weight: 200;
@@ -69,14 +81,14 @@ section h2 {
 }
 
 #mainNav .navbar-brand {
-  color: #fdcc52;
+  color: #000;
   font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
   font-weight: 200;
   letter-spacing: 1px;
 }
 
 #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
-  color: #fcbd20;
+  color: #727CD5;
 }
 
 #mainNav .navbar-toggler {
@@ -93,7 +105,7 @@ section h2 {
 }
 
 #mainNav .navbar-nav > li > a.active {
-  color: #fdcc52 !important;
+  color: #727CD5 !important;
   background-color: transparent;
 }
 
@@ -108,7 +120,7 @@ section h2 {
 
 #mainNav .navbar-nav > li > a:hover,
 #mainNav .navbar-nav > li > a:focus:hover {
-  color: #fdcc52;
+  color: #727CD5;
 }
 
 @media (min-width: 992px) {
@@ -117,28 +129,28 @@ section h2 {
     background-color: transparent;
   }
   #mainNav .navbar-brand {
-    color: fade(white, 70%);
+    color: fade(#727CD5, 70%);
   }
   #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
-    color: white;
+    color: #727CD5;
   }
   #mainNav .navbar-nav > li > a,
   #mainNav .navbar-nav > li > a:focus {
-    color: rgba(255, 255, 255, 0.7);
+    color: #727CD5;
   }
   #mainNav .navbar-nav > li > a:hover,
   #mainNav .navbar-nav > li > a:focus:hover {
-    color: white;
+    color: #4DA2D8;
   }
   #mainNav.navbar-shrink {
     border-color: rgba(34, 34, 34, 0.1);
-    background-color: white;
+    background-color: #f0f2f8d3;
   }
   #mainNav.navbar-shrink .navbar-brand {
     color: #222222;
   }
   #mainNav.navbar-shrink .navbar-brand:hover, #mainNav.navbar-shrink .navbar-brand:focus {
-    color: #fdcc52;
+    color: #727CD5;
   }
   #mainNav.navbar-shrink .navbar-nav > li > a,
   #mainNav.navbar-shrink .navbar-nav > li > a:focus {
@@ -146,7 +158,7 @@ section h2 {
   }
   #mainNav.navbar-shrink .navbar-nav > li > a:hover,
   #mainNav.navbar-shrink .navbar-nav > li > a:focus:hover {
-    color: #fdcc52;
+    color: #727CD5;
   }
 }
 
@@ -155,9 +167,26 @@ header.masthead {
   width: 100%;
   padding-top: 150px;
   padding-bottom: 100px;
-  color: white;
-  background: url("../img/bg-pattern.png"), #727CD5;
-  background: url("../img/bg-pattern.png"), linear-gradient(to left, #727CD5, #4DA2D8,#97D0EE );
+  color: #727CD5;
+  background: url("../img/bolinhas.png"), #fff;
+  background: url("../img/bolinhas.png"), linear-gradient(to left, #fff, #fff,#fff );
+}
+
+header.masthead2 {
+  position: relative;
+  width: 100%;
+  padding-top: 150px;
+  padding-bottom: 100px;
+  color: #727CD5;
+  background: #F0F2F8;
+}
+header.masthead2 h6 {
+  color: rgb(27, 27, 27);
+  font-size: 30px;
+}
+header.masthead2 p {
+  color: rgb(59, 59, 59);
+  font-size: 16px;
 }
 
 header.masthead .header-content {
@@ -286,7 +315,7 @@ section.features .feature-item i {
 section.cta {
   position: relative;
   padding: 250px 0;
-  background-image: url("../img/bg-cta.jpg");
+  background-image: url("../img/senhora.jpg");
   background-position: center;
   background-size: cover;
 }
@@ -298,10 +327,10 @@ section.cta .cta-content {
 
 section.cta .cta-content h2 {
   font-size: 50px;
-  max-width: 450px;
+  max-width: 550px;
   margin-top: 0;
   margin-bottom: 25px;
-  color: white;
+  color: #727CD5;
 }
 
 @media (min-width: 768px) {
@@ -342,7 +371,7 @@ section.contact ul.list-social li a {
   display: block;
   width: 80px;
   height: 80px;
-  color: white;
+  color: #fff;
   border-radius: 100%;
 }
 
@@ -396,12 +425,12 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 }
 
 .bg-primary {
-  background: #fdcc52;
-  background: linear-gradient(#fdcc52, #fdc539);
+  background: #727CD5;
+  background: linear-gradient(to left,#97D0EE,#727CD5);
 }
 
 .text-primary {
-  color: #fdcc52;
+  color: #727CD5;
 }
 
 .no-gutter > [class*='col-'] {
@@ -410,15 +439,17 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 }
 
 .btn-outline {
-  color: white;
-  border: 1px solid;
-  border-color: white;
+  color: rgb(255, 255, 255);
+  border-color: #727CD5;
+  background-color: #727CD5;
 }
 
 .btn-outline:hover, .btn-outline:focus, .btn-outline:active, .btn-outline.active {
-  color: white;
-  border-color: #fdcc52;
-  background-color: #fdcc52;
+  
+  color: #727CD5;
+  border: 1px solid;
+  border-color: #727CD5;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 .btn {
@@ -431,4 +462,15 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 .btn-xl {
   font-size: 11px;
   padding: 15px 45px;
+}
+
+h1 {
+  font-size: 100px;
+}
+
+
+.mb-4 {
+  font-family: poppins, 'Helvetica', 'Arial', 'sans-serif';
+  font-weight: bold;
+  letter-spacing: 1px;
 }
